# asserting

./: .gitignore  CHANGELOG.md  Cargo.toml  IDEAS.md  README.md  justfile
.github/workflows/: ci.yml  coverage.yml
.ide-settings/jetbrains/runConfigurations/: Clippy no-std.run.xml  Clippy.run.xml  Doc.run.xml  Test lib default-features.run.xml  Test lib no-features.run.xml  Test lib no-std.run.xml  Test no-std.run.xml
asserting/: Cargo.toml
asserting/src/: lib.rs
asserting/src/equality/: mod.rs
examples/: assertion_function.rs  colored_diffs.rs  custom_assertion_for_struct.rs  custom_assertion_reusing_existing.rs  naming_extracted_fields.rs
examples/fixture/: mod.rs
src/: assertion.rs  assertions.rs  char_count.rs  collection.rs  env.rs  equality.rs  expectations.rs  length.rs  lib.rs  mapping.rs  number.rs  prelude.rs  properties.rs  specification.rs
src/bigdecimal/: mod.rs  tests.rs
src/boolean/: mod.rs  tests.rs
src/c_string/: mod.rs  tests.rs
src/char/: mod.rs  tests.rs
src/color/: mod.rs  tests.rs
src/colored/: mod.rs  tests.rs
src/derived_spec/: mod.rs  tests.rs
src/equality/: mod.rs  tests.rs
src/error/: mod.rs  tests.rs
src/expectation_combinators/: mod.rs  tests.rs
src/extracting/: mod.rs  tests.rs
src/float/: mod.rs  tests.rs
src/integer/: mod.rs  tests.rs
src/iterator/: mod.rs  tests.rs
src/map/: mod.rs  tests.rs
src/num_bigint/: mod.rs  tests.rs
src/option/: mod.rs  tests.rs
src/order/: mod.rs  tests.rs
src/os_sting/: mod.rs  tests.rs
src/panic/: mod.rs  tests.rs
src/predicate/: mod.rs  tests.rs
src/range/: mod.rs  tests.rs
src/recursive_comparison/: mod.rs  tests.rs
src/recursive_comparison/macros/: mod.rs  tests.rs
src/recursive_comparison/path/: mod.rs  tests.rs
src/recursive_comparison/serialize/: mod.rs  tests.rs
src/recursive_comparison/value/: mod.rs  proptest_support.rs  tests.rs
src/recursive_comparison/value/map/: mod.rs  tests.rs
src/recursive_comparison/value/number/: mod.rs  tests.rs
src/result/: mod.rs  tests.rs
src/rust_decimal/: mod.rs  tests.rs
src/slice/: mod.rs  tests.rs
src/spec/: mod.rs  tests.rs
src/specification/: mod.rs
src/string/: mod.rs  tests.rs
src/vec/: mod.rs  tests.rs
tests/: version_numbers.rs
