[package]
name = "asserting"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true

description = """
Fluent assertions for testing in the Rust programming language.
"""
keywords = ["assertions", "testing", "fluent", "matchers"]
categories = ["development-tools::testing", "no-std"]

[dependencies]

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
